# mitmproxy2swagger

./: .dockerignore  .flake8  .gitignore  .markdownlint.yaml  .mypy.ini  .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  dupsko.yml  flows1  flows3  mitmproxy2swagger.py  pyproject.toml  specs.yml  swagger_util.py
.github/: dependabot.yml
.github/workflows/: build_docker.yml  publish_docker.yml  python.yml  release.yml  tests.yml
example_outputs/: lisek-out.swagger.yml  lisek-static.html
mitmproxy2swagger/: console_util.py  har_capture_reader.py  mitmproxy2swagger.py  mitmproxy_capture_reader.py  mitmproxy_to_swagger.py  swagger_util.py  test_mitmproxy2swagger.py  test_openapi_compliance.py  testing_util.py
testcase/: commands.sh
testdata/: form_data_flows  form_data_har.har  generic_keys_flows  generic_keys_testclient.py  generic_keys_testserver.py  headers_and_params_har.har  msgpack_flows  msgpack_testclient.py  msgpack_testserver.py  test_flows  testclient.py  testserver.py
