[project]
name = "mitmproxy2swagger"
version = "0.14.0"
description = ""
authors = [{name = "alufers", email = "alufers@wp.pl"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "mitmproxy>=12.2.3",
    "ruamel.yaml>=0.17.32",
    "json-stream>=2.3.2,<3",
    "msgpack>=1.0.7,<2",
]

[project.scripts]
mitmproxy2swagger = "mitmproxy2swagger.mitmproxy2swagger:main"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "openapi-spec-validator>=0.9.0",
    "pytest-cov>=7.1.0",
    "prek>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
]
